WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62685
REGRESSION(
r88757
): [Chromium] Vertical position of media slider thumb is wrong.
https://bugs.webkit.org/show_bug.cgi?id=62685
Summary
REGRESSION(r88757): [Chromium] Vertical position of media slider thumb is wrong.
Kent Tamura
Reported
2011-06-14 17:52:21 PDT
If the height of the <input> is smaller than the height of the thumb, we should center the thumb position vertically.
Attachments
Patch
(2.26 KB, patch)
2011-06-14 19:14 PDT
,
Kent Tamura
morrita
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2011-06-14 19:14:17 PDT
Created
attachment 97220
[details]
Patch
Kent Tamura
Comment 2
2011-06-14 19:14:55 PDT
(In reply to
comment #1
)
> Created an attachment (id=97220) [details] > Patch
This will fix 12 tests listed in test_expectations.txt.
Hajime Morrita
Comment 3
2011-06-14 20:09:44 PDT
Comment on
attachment 97220
[details]
Patch r=me.
Dimitri Glazkov (Google)
Comment 4
2011-06-14 20:13:46 PDT
Comment on
attachment 97220
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=97220&action=review
> Source/WebCore/rendering/RenderSlider.cpp:106 > + thumbBox->setY(thumbBox->y() - (heightDiff / 2) - borderTop());
What about padding, or margins?
Kent Tamura
Comment 5
2011-06-14 20:37:55 PDT
Comment on
attachment 97220
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=97220&action=review
>> Source/WebCore/rendering/RenderSlider.cpp:106 >> + thumbBox->setY(thumbBox->y() - (heightDiff / 2) - borderTop()); > > What about padding, or margins?
Oh, it's a good point. We should take account of padding, and margin is ignorable. Well, I have just realized we'd like to center the thumb for the *content* of the <input>, not the border-box. So, int heightDiff = thumbBox->height() - contentHeight(); if (heightDiff > 0) thumbBox->setY(thumbBox->y() - (heightDiff / 2)); is the correct code. I'll land the patch with this fix.
Kent Tamura
Comment 6
2011-06-14 20:41:38 PDT
Committed
r88901
: <
http://trac.webkit.org/changeset/88901
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug