2011-06-14  Kent Tamura  <tkent@chromium.org>

Reviewed by Hajime Morita.

        REGRESSION(r88757): [Chromium] Vertical position of media slider thumb is wrong.
        https://bugs.webkit.org/show_bug.cgi?id=62685

        No new tests. Covered by existing tests.

        * rendering/RenderSlider.cpp:
        (WebCore::RenderSlider::layout): Center the thumb position.
        * rendering/RenderSlider.h:

Canonical link: https://commits.webkit.org/78250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88901 268f45cc-cd09-0410-ab3c-d52691b4dbfc